objects/Listing_Analytics_Event__e.object
<CustomObject>
    <fields>
        <fullName>Action2__c</fullName>
        <label>Action2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Document_ID__c</fullName>
        <label>Document ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listing_ID__c</fullName>
        <label>Listing ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page_Source__c</fullName>
        <label>Page Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Listing Analytics Event</label>
    <pluralLabel>Listing Analytics Events</pluralLabel>
</CustomObject>